Add location to server and core data

--- a/here clone/Base.lproj/Main.storyboard
+++ b/here clone/Base.lproj/Main.storyboard
@@ -91,6 +91,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="U0z-qd-WhP" id="8Kx-cH-CGP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uJ4-ga-gOI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
