--- a/here clone/Base.lproj/Main.storyboard
+++ b/here clone/Base.lproj/Main.storyboard
@@ -165,17 +165,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fhz-2a-mzQ">
-                                <rect key="frame" x="16" y="72" width="568" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please provide your name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fhz-2a-mzQ">
+                                <rect key="frame" x="16" y="103" width="568" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2hg-ef-bhd">
+                                <rect key="frame" x="550" y="20" width="34" height="30"/>
+                                <state key="normal" title="Save">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="e0q-hl-mSt" kind="unwind" identifier="do Set Username" unwindAction="doSetUsername:" id="Wsy-zk-OzY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="fhz-2a-mzQ" firstAttribute="trailing" secondItem="a2b-6z-lof" secondAttribute="trailingMargin" id="Rfu-eb-xJx"/>
-                            <constraint firstItem="fhz-2a-mzQ" firstAttribute="top" secondItem="Vzq-yT-3Am" secondAttribute="bottom" constant="8" symbolic="YES" id="lsz-UU-v5G"/>
-                            <constraint firstItem="fhz-2a-mzQ" firstAttribute="leading" secondItem="a2b-6z-lof" secondAttribute="leadingMargin" id="qEs-v1-CDP"/>
+                            <constraint firstItem="2hg-ef-bhd" firstAttribute="trailing" secondItem="a2b-6z-lof" secondAttribute="trailingMargin" id="4fR-AY-p98"/>
+                            <constraint firstItem="2hg-ef-bhd" firstAttribute="trailing" secondItem="fhz-2a-mzQ" secondAttribute="trailing" id="T62-Ne-yns"/>
+                            <constraint firstItem="2hg-ef-bhd" firstAttribute="top" secondItem="Vzq-yT-3Am" secondAttribute="bottom" id="dix-L4-GBL"/>
+                            <constraint firstItem="fhz-2a-mzQ" firstAttribute="top" secondItem="2hg-ef-bhd" secondAttribute="bottom" constant="53" id="gy3-mr-M3D"/>
+                            <constraint firstItem="fhz-2a-mzQ" firstAttribute="leading" secondItem="a2b-6z-lof" secondAttribute="leadingMargin" id="z40-cW-EmN"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -187,10 +198,12 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="saveButton" destination="2hg-ef-bhd" id="atk-yW-r0h"/>
                         <outlet property="usernameTextField" destination="fhz-2a-mzQ" id="5dA-FA-n1g"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1vj-6y-rxG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="e0q-hl-mSt" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1394" y="1024"/>
         </scene>
@@ -201,6 +214,9 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="XjC-6b-hR7"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <segue destination="TAS-1a-I6N" kind="presentation" identifier="MessagesToSetUsername" modalPresentationStyle="currentContext" id="dTg-Hs-0lb"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VVq-uG-jE3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -601,8 +617,9 @@
         <image name="menu.png" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="cbf-RF-qK9"/>
         <segue reference="YfP-lJ-EHk"/>
         <segue reference="SLB-Nu-Mib"/>
-        <segue reference="cbf-RF-qK9"/>
+        <segue reference="dTg-Hs-0lb"/>
     </inferredMetricsTieBreakers>
 </document>
